# caer

./: .cproject  .gitignore  CMakeLists.txt  README  README.Dynap-se  README.OpenCV  README.Windows  main.c  main.h  main_dynapse.c  main_dynapse_dvs_software.c  main_stereo.c
modules/: .gitignore  CMakeLists.txt  PrivateModules.txt
modules/PrivateModules/: PrivateModules.txt
modules/accumulatefilter/: CMakeLists.txt  README.md  accumulatefilter.c  accumulatefilter.h
modules/activityindicator/: CMakeLists.txt  activityOpencv.cpp  activityOpencv.hpp  activityindicator.c  activityindicator.h  wrapper.cpp  wrapper.h
modules/backgroundactivityfilter/: CMakeLists.txt  backgroundactivityfilter.c
modules/caffeinterface/: CMakeLists.txt  caffewrapper_module.c  caffewrapper_module.h  classify.cpp  classify.hpp  settings.h  wrapper.cpp  wrapper.h
modules/caffeinterface/cmake_extra_modules/: FindCaffe.cmake
modules/cameracalibration/: calibration.cpp  calibration.hpp  calibration_settings.h  calibration_wrapper.cpp  calibration_wrapper.h  cameracalibration.c  cameracalibration.h
modules/denoisingautoencoder/: CMakeLists.txt  denoisingautoencoder.cpp  denoisingautoencoder.hpp  denoisingautoencoder_module.c  denoisingautoencoder_module.h  wrapper.cpp  wrapper.h
modules/depressingsynapsefilter/: CMakeLists.txt  depressingsynapsefilter.c  depressingsynapsefilter.h
modules/dvstodynapse/: CMakeLists.txt  dvstodynapse.c  dvstodynapse.h
modules/dynapseinit/: CMakeLists.txt  dynapseinit.c  dynapseinit.h  settings.h
modules/effectivetransferfunction/: CMakeLists.txt  effectivetransferfunction.c  effectivetransferfunction.h
modules/frameenhancer/: CMakeLists.txt  frameenhancer.c
modules/gesturelearningfilter/: CMakeLists.txt  gesturelearningfilter.c  gesturelearningfilter.h  settings.h
modules/helloworld/: CMakeLists.txt  helloworld.c  helloworld.h
modules/imagegenerator/: CMakeLists.txt  imagegenerator.c  imagegenerator.h
modules/imagestreamerbeeper/: CMakeLists.txt  imagestreamerbeeper.c  imagestreamerbeeper.h
modules/imagestreamerfilter/: imagestreamerfilter.c  imagestreamerfilter.h  settings.h
modules/imagestreamerfilter/lib/: Makefile  image_test.c  simple_matrix.h
modules/imagestreamervisualizer/: CMakeLists.txt  imagestreamervisualizer.c  imagestreamervisualizer.h
modules/infofilter/: CMakeLists.txt  infofilter.c  infofilter.h
modules/ini/: CMakeLists.txt  davis_common.c  davis_common.h  davis_fx2.c  davis_fx2.h  davis_fx3.c  davis_fx3.h  dvs128.c  dvs128.h  dynapse_cam_prog.c  dynapse_common.c  dynapse_common.h  dynapse_fx2.c  dynapse_fx2.h  dynapse_sram_prog.c  gen_spikes.c
modules/learningfilter/: CMakeLists.txt  learningfilter.c  learningfilter.h
modules/meanfilter/: CMakeLists.txt  meanfilter.c  meanfilter.h
modules/meanratefilter/: CMakeLists.txt  meanratefilter.c  meanratefilter.h
modules/meanratefilter_dvs/: CMakeLists.txt  meanratefilter_dvs.c  meanratefilter_dvs.h
modules/mediantracker/: CMakeLists.txt  mediantracker.c  mediantracker.h
modules/misc/: CMakeLists.txt  inout_common.h
modules/misc/in/: CMakeLists.txt  file.c  file.h  in_common.h  in_file.c  in_file.h  in_net_tcp_server.c  input_common.c  input_common.h  (+7 more)
modules/monitorneufilter/: CMakeLists.txt  monitorneufilter.c  monitorneufilter.h
modules/nullhopinterface/: CMakeLists.txt  axichanneltimeoutexcep.cpp  axidmalib.cpp  axidmalib.hpp  axigpio.cpp  axigpio.hpp  classify.cpp  classify.hpp  npp_log_utilities.cpp  npp_log_utilities.h  npp_std_func_sw_pkg.cpp  nullhopinterface.c  nullhopinterface.h  wrapper.cpp  wrapper.h  zs_axi_formatter.cpp  zs_axi_formatter.h  zs_backend_interface.cpp  zs_backend_interface.h  zs_cnn_layer.cpp  zs_cnn_layer.h  zs_fc_layer.cpp  zs_fc_layer.h  zs_fpga_test_top.cpp  zs_monitor.cpp  zs_monitor.h  zs_monitor_cnn_layer.cpp  zs_monitor_cnn_layer.h  zs_top_level_sw_pkg.cpp  zsaxidmalib.cpp  zsaxidmalib.hpp
modules/opencvdisplay/: CMakeLists.txt  opencvdisplay.cpp  opencvdisplay.hpp  opencvdisplay_module.c  opencvdisplay_module.h  wrapper.cpp  wrapper.h
modules/opencvopticflow/: CMakeLists.txt  opticflow.c  opticflow.cpp  opticflow.h  opticflow.hpp  opticflow_settings.h  opticflow_wrapper.cpp  opticflow_wrapper.h
modules/pixelmatrix/: CMakeLists.txt  pixelmatrix.c  pixelmatrix.h
modules/poseestimation/: CMakeLists.txt  calibration.cpp  calibration.cpp~  calibration.hpp  calibration.hpp~  calibration_settings.h  calibration_wrapper.cpp  calibration_wrapper.h  calibration_wrapper.h~  cameracalibration.c  cameracalibration.h
modules/rectangulartracker/: CMakeLists.txt  peopleCountingOpenCV.hpp  rectangulartracker.c  rectangulartracker.h  wrapper.h
modules/rectangulartracker_dynamic/: CMakeLists.txt  peopleCountingOpenCV.cpp  peopleCountingOpenCV.hpp  rectangulartracker_dynamic.c  rectangulartracker_dynamic.h  wrapper.cpp  wrapper.h
modules/refractoryfilter/: CMakeLists.txt  refractoryfilter.c  refractoryfilter.h
modules/rotatefilter/: CMakeLists.txt  rotatefilter.c  rotatefilter.h
modules/spatialbandpassfilter/: CMakeLists.txt  spatialbandpassfilter.c  spatialbandpassfilter.h
modules/statistics/: CMakeLists.txt  statistics.c  statistics.h
modules/stereocalibration/: CMakeLists.txt  calibration.cpp  calibration.hpp  calibration_settings.h  calibration_wrapper.cpp  calibration_wrapper.h  stereocalibration.c  stereocalibration.h
modules/stereomatching/: CMakeLists.txt  matching_settings.h  stereomatching.c  stereomatching.cpp  stereomatching.h  stereomatching.hpp  stereomatching_wrapper.cpp  stereomatching_wrapper.h
modules/surveillance/: CMakeLists.txt  surveillance.c  surveillance.h
modules/trainfromcaffe/: CMakeLists.txt  trainfromcaffe.c  trainfromcaffe.h
modules/visualizer/: CMakeLists.txt  visualizer.c  visualizer.h  visualizer_handlers.c  visualizer_handlers_frame.c  visualizer_renderers.c
modules/visualizer_allegro/: visualizer.c  visualizer.h  visualizer_allegro.c  visualizer_allegro.h
modules/visualizer_simple/: CMakeLists.txt  visualizer_simple.c
utils/caerctl/: .gitignore  CMakeLists.txt  caerctl.c
(+54 files in other folders)
