IF (NOT ENABLE_DENOISINGAUTOENCODER)
	SET(ENABLE_DENOISINGAUTOENCODER 0 CACHE BOOL "Enable Denoising Auto-Encoder ")
ENDIF()

IF (ENABLE_DENOISINGAUTOENCODER)

	SET(CAER_COMPILE_DEFINITIONS ${CAER_COMPILE_DEFINITIONS} -DENABLE_DENOISINGAUTOENCODER=1)

	FIND_PACKAGE(OpenCV REQUIRED core highgui imgproc opencv_imgcodecs)
	IF (OpenCV_FOUND)
		MESSAGE(STATUS "OpenCV FOUND - ${OpenCV_LIBRARIES} ${OpenCV_LIBRARY_DIRS}")
		SET(OPENCVD_INCDIRS ${OPENCVD_INCDIRS} ${OpenCV_INCLUDE_DIRS})
		SET(OPENCVD_LIBDIRS ${OPENCVD_LIBDIRS} ${OpenCV_LIBRARY_DIRS})
		SET(OPENCVD_C_LIBS ${OPENCVD_C_LIBS} ${OpenCV_LIBRARIES})
	ENDIF()

	SET(OPENCVD_C_SRC_FILES ${OPENCVD_C_SRC_FILES} modules/denoisingautoencoder/denoisingautoencoder_module.c)

	SET(OPENCVD_CXX_LIBS ${OPENCVD_CXX_LIBS} ${OPENCVD_C_LIBS})
	SET(OPENCVD_CXX_SRC_FILES ${OPENCVD_CXX_SRC_FILES} modules/denoisingautoencoder/denoisingautoencoder.cpp modules/denoisingautoencoder/wrapper.cpp)

	# Propagate to parent scope.
	SET(CAER_INCDIRS ${CAER_INCDIRS} ${OPENCVD_INCDIRS} PARENT_SCOPE)
	SET(CAER_LIBDIRS ${CAER_LIBDIRS} ${OPENCVD_LIBDIRS} PARENT_SCOPE)
	SET(CAER_C_LIBS ${CAER_C_LIBS} ${OPENCVD_C_LIBS} PARENT_SCOPE)
	SET(CAER_C_SRC_FILES ${CAER_C_SRC_FILES} ${OPENCVD_C_SRC_FILES} PARENT_SCOPE)
	SET(CAER_CXX_LIBS ${CAER_CXX_LIBS} ${OPENCVD_CXX_LIBS} PARENT_SCOPE)
	SET(CAER_CXX_SRC_FILES ${CAER_CXX_SRC_FILES} ${OPENCVD_CXX_SRC_FILES} PARENT_SCOPE)
	SET(CAER_COMPILE_DEFINITIONS ${CAER_COMPILE_DEFINITIONS} PARENT_SCOPE)
ENDIF()
