IF (NOT ENABLE_INFOFILTER)
	SET(ENABLE_INFOFILTER 0 CACHE BOOL "Enable the info filter module")
ENDIF()

IF (ENABLE_INFOFILTER)
	SET(CAER_COMPILE_DEFINITIONS ${CAER_COMPILE_DEFINITIONS} -DENABLE_INFOFILTER=1 PARENT_SCOPE)

	IF (NOT ENABLE_VISUALIZER)
		MESSAGE(SEND_ERROR "Visualizer required by Info Filter module. Please enable it!")
		RETURN()
	ENDIF()
	
	PKG_CHECK_MODULES(ALLEGRO5_IMAGE allegro_image-5)
	
	IF (NOT ALLEGRO5_FOUND)
		PKG_CHECK_MODULES(ALLEGRO5_IMAGE allegro_image-5.0>=5.0.11)
	ENDIF()
	
	SET(VISUALIZER_LIBS ${VISUALIZER_LIBS} ${ALLEGRO5_IMAGE_LIBRARIES})
	SET(VISUALIZER_INCDIRS ${VISUALIZER_INCDIRS} ${ALLEGRO5_IMAGE_INCLUDE_DIRS})
	SET(VISUALIZER_LIBDIRS ${VISUALIZER_LIBDIRS} ${ALLEGRO5_IMAGE_LIBRARY_DIRS})
	
	SET(CAER_INFO_FILES modules/infofilter/infofilter.c)

	SET(CAER_C_SRC_FILES ${CAER_C_SRC_FILES} ${CAER_INFO_FILES} PARENT_SCOPE)
	SET(CAER_INCDIRS ${CAER_INCDIRS} ${VISUALIZER_INCDIRS} PARENT_SCOPE)
	SET(CAER_LIBDIRS ${CAER_LIBDIRS} ${VISUALIZER_LIBDIRS} PARENT_SCOPE)
	SET(CAER_C_LIBS ${CAER_C_LIBS} ${VISUALIZER_LIBS} PARENT_SCOPE)
	
ENDIF()
