ADD_SUBDIRECTORY(in)
ADD_SUBDIRECTORY(out)

# Add support for PNG compression via libpng.
PKG_CHECK_MODULES(PNGCOMPR libpng>=1.6)

IF (PNGCOMPR_FOUND)
	SET(CAER_COMPILE_DEFINITIONS ${CAER_COMPILE_DEFINITIONS} -DENABLE_INOUT_PNG_COMPRESSION=1)

	SET(CAER_INCDIRS ${CAER_INCDIRS} ${PNGCOMPR_INCLUDE_DIRS})
	SET(CAER_LIBDIRS ${CAER_LIBDIRS} ${PNGCOMPR_LIBRARY_DIRS})

	SET(CAER_C_LIBS ${CAER_C_LIBS} ${PNGCOMPR_LIBRARIES})
ENDIF()

# Propagate to parent scope.
SET(CAER_INCDIRS ${CAER_INCDIRS} PARENT_SCOPE)
SET(CAER_LIBDIRS ${CAER_LIBDIRS} PARENT_SCOPE)
SET(CAER_C_LIBS ${CAER_C_LIBS} PARENT_SCOPE)
SET(CAER_C_SRC_FILES ${CAER_C_SRC_FILES} PARENT_SCOPE)
SET(CAER_CXX_LIBS ${CAER_CXX_LIBS} PARENT_SCOPE)
SET(CAER_CXX_SRC_FILES ${CAER_CXX_SRC_FILES} PARENT_SCOPE)
SET(CAER_COMPILE_DEFINITIONS ${CAER_COMPILE_DEFINITIONS} PARENT_SCOPE)
