IF (NOT ENABLE_POSEESTIMATION)
	SET(ENABLE_POSEESTIMATION 0 CACHE BOOL "Enable the camera pose calibration module (using OpenCV)")
ENDIF()

IF (ENABLE_POSEESTIMATION)
	SET(CAER_COMPILE_DEFINITIONS ${CAER_COMPILE_DEFINITIONS} -DENABLE_POSEESTIMATION=1 PARENT_SCOPE)

	# Require new OpenCV 3.1 at least.
	PKG_CHECK_MODULES(OPENCV3 REQUIRED opencv>=3.1)

	SET(CALIB_INCDIRS ${OPENCV3_INCLUDE_DIRS})
	SET(CALIB_LIBDIRS ${OPENCV3_LIBRARY_DIRS})

	SET(CMAKE_MODULE_PATH ${CMAKE_INSTALL_PREFIX}/lib/cmake/ )
	find_package(aruco REQUIRED )
	SET(CALIB_C_LIBS ${aruco_LIBS})

	SET(CALIB_C_SRC_FILES  modules/poseestimation/cameracalibration.c)
	SET(CALIB_CXX_SRC_FILES  modules/poseestimation/calibration.cpp  modules/poseestimation/calibration_wrapper.cpp)

	# Propagate to parent scope.
	SET(CAER_INCDIRS ${CAER_INCDIRS} ${CALIB_INCDIRS} PARENT_SCOPE)
	SET(CAER_LIBDIRS ${CAER_LIBDIRS} ${CALIB_LIBDIRS} PARENT_SCOPE)
	SET(CAER_C_LIBS ${CAER_C_LIBS} ${CALIB_C_LIBS} PARENT_SCOPE)
	SET(CAER_C_SRC_FILES ${CAER_C_SRC_FILES} ${CALIB_C_SRC_FILES} PARENT_SCOPE)
	SET(CAER_CXX_LIBS ${CAER_CXX_LIBS} ${CALIB_CXX_LIBS} PARENT_SCOPE)
	SET(CAER_CXX_SRC_FILES ${CAER_CXX_SRC_FILES} ${CALIB_CXX_SRC_FILES} PARENT_SCOPE)
ENDIF()
